# ghtest

./: .coverage  .gitignore  README.md  main-bak.ipynb  main.ipynb  nohup.out  pyproject.toml
.github/workflows/: ci.yml  project-ci.yml
.ipynb_checkpoints/: main-checkpoint.ipynb
docs/: conf.py
reports/: bandit.json  coverage.xml  docs.json  pytest-report.xml  ruff-details.json  ruff.json
src/ghtest/: __init__.py  analyze_tests.py  cassette_sanitizer.py  cli.py  core.py  coverage_analysis.py  create_tests_workflow.py  param_suggestor.py  scanner.py  test_utils.py  tests_creator.py  tests_writer.py
testdata/: gh_api.py
testdata_tests/: test_generated_0.py  test_generated_1.py  test_generated_2.py  test_generated_3.py  test_generated_4.py  test_generated_5.py  test_generated_6.py  test_generated_7.py  test_generated_8.py
testdata_tests/cassettes/: gh_api.create_repo.case_0.yaml  gh_api.create_repo.case_1.yaml  gh_api.create_repo.case_11.yaml  gh_api.create_repo.scenario.cleanup.yaml  gh_api.create_repo.scenario.step_0.yaml  gh_api.create_repo.scenario.step_1.yaml  gh_api.create_repo.scenario.step_2.yaml  gh_api.create_repo.scenario.step_4.yaml  gh_api.delete_repo.case_0.yaml  gh_api.delete_repo.case_1.yaml  gh_api.delete_repo.case_10.yaml  gh_api.delete_repo.case_11.yaml  gh_api.delete_repo.case_12.yaml  gh_api.delete_repo.case_14.yaml  gh_api.delete_repo.case_2.yaml  gh_api.delete_repo.case_3.yaml  (+43 more)
tests/: test_cassette_sanitizer.py  test_core.py  test_param_suggestor.py  test_scanner.py  test_tests_creator.py  test_tests_writer.py
(+62 files in other folders)
