[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghtest"
version = "0.1.0"
description = "Coverage-guided test generator for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "natsort>=8.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "vcrpy>=6.0.0",
]

[project.scripts]
ghtest = "ghtest.cli:main"
